Kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: ingress-resource

spec:

  defaultBackend:

    resource:

      apiGroup: k8s.example.com

      kind: Storage

      name: static-assets

  rules:

    - http:

        paths:

          - path: /icons

            pathType: ImplementationSpecific

            backend:

              resource:

                apiGroup: k8s.example.com

                kind: Storage

                name: icon-assets
